--- a/app/src/main/res/layout/item_feedback.xml
+++ b/app/src/main/res/layout/item_feedback.xml
@@ -1,23 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
     android:id="@+id/item_container_feedback"
-    android:padding="@dimen/activity_vertical_margin">
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:padding="20dp"
-        android:background="@drawable/btn_regis"
-        android:orientation="vertical">
+    android:background="@drawable/btn_regis"
+    android:layout_margin="16dp"
+    android:padding="23dp">
 
         <TableRow
+            app:layout_constraintTop_toTopOf="parent"
+            android:id="@+id/tableSatu"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp">
@@ -38,6 +33,10 @@
 
 
         <TableRow
+            android:layout_marginTop="10dp"
+            android:layout_marginStart="6dp"
+            app:layout_constraintTop_toBottomOf="@id/tableSatu"
+            android:id="@+id/tableDua"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp">
@@ -54,12 +53,26 @@
                 style="@style/TextSpec.Value" />
         </TableRow>
 
-        <ImageView
-            android:id="@+id/editFeddback"
-            app:tint="@color/putih"
-            android:src="@drawable/ic_add_black_24dp"
-            android:layout_width="32dp"
-            android:layout_height="32dp"/>
+    <ImageView
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@id/tableDua"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:id="@+id/deleteFeddback"
+        app:tint="@color/putih"
+        android:src="@drawable/ic_trash"
+        android:layout_width="24dp"
+        android:layout_height="24dp"/>
 
-    </LinearLayout>
-</RelativeLayout>
+    <ImageView
+        app:layout_constraintTop_toTopOf="@id/deleteFeddback"
+        app:layout_constraintEnd_toStartOf="@id/deleteFeddback"
+        android:layout_marginEnd="16dp"
+        android:id="@+id/editFeddback"
+        app:tint="@color/putih"
+        android:src="@drawable/ic_edit"
+        android:layout_width="24dp"
+        android:layout_height="24dp"/>
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
